--- a/jpress-web-template-jblog/src/main/webapp/templates/JBlog/assets/css/app.css
+++ b/jpress-web-template-jblog/src/main/webapp/templates/JBlog/assets/css/app.css
@@ -1421,7 +1421,7 @@ a.x-a-active:hover{
 }
 .jblog-nav{
 	width:100%;
-	background:#fff;
+	background:#0f3e82;
 	border-bottom:1px solid #ededed;
 }
 .jblog-nav-content{
@@ -1430,6 +1430,7 @@ a.x-a-active:hover{
 	overflow:hidden;
 	height:4rem;
 	line-height:4rem;
+    color:#4474BB;
 }
 .jblog-nav-content ul{
 	float:left;
@@ -1443,17 +1444,23 @@ a.x-a-active:hover{
 	
 }
 .jblog-nav-content ul li a{
-	color:#2a2a2a;
-	display: block;
-    width: 100%;
-    height: 100%;
-    color:#333;
-    position: relative;
-    padding:0 0.3rem;
-
+    width: 110px;
+    height: 48px;
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    color: #fcfdff;
+    line-height: 48px;
 } 
 .jblog-nav-content ul li a:hover{
-    color:#19b5fe;
+    width: 110px;
+    height: 48px;
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    color: #000;
+    line-height: 48px;
+    background: url(../images/xtb.png) no-repeat 2px -256px;
 }
 .jblog-rss-content{
 	position: relative;
