--- a/jpress-web-template-jblog/src/main/webapp/templates/JBlog/_layout.html
+++ b/jpress-web-template-jblog/src/main/webapp/templates/JBlog/_layout.html
@@ -18,6 +18,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="renderer" content="webkit">
   <link rel="stylesheet" href="${CTPATH}/assets/css/app.css"/>
+    <link rel="stylesheet" href="${CTPATH}/assets/css/style.css"/>
+    <link href="${CTPATH}/assets/css/font-awesome.min.css" rel="stylesheet">
+    <link href="${CTPATH}/assets/css/responsive.css" rel="stylesheet">
+    <link href="${CTPATH}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="${CTPATH}/assets/font-awesome/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="${CTPATH}/assets/mediaelement/mediaelementplayer.css" />
   <@css_import />
@@ -80,6 +84,128 @@
     </div>
   </div>
 </header>
+<!-- home -->
+<section class="home">
+    <div class="intro">
+        <div id="home" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#home" data-slide-to="0" class="active"></li>
+                <li data-target="#home" data-slide-to="1"></li>
+                <li data-target="#home" data-slide-to="2"></li>
+                <li data-target="#home" data-slide-to="3"></li>
+                <li data-target="#home" data-slide-to="4"></li>
+                <li data-target="#home" data-slide-to="5"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-7">
+                                <div class="intro-content">
+                                    <h1>Last Chance</h1>
+                                    <h2>Biggest <span class="highlight">Sale</span></h2>
+                                    <p>Nam apeirian assentior ei, utquo eros posse verterem. Cum eu error congue saperet. Teer eam exerci vputate consetetur.</p>
+                                    <a class="btn btn-default">Shop Now</a>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <img class="img-responsive" src="images/person.png" height="742" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-7">
+                                <div class="intro-content">
+                                    <h1>Last Chance</h1>
+                                    <h2>Biggest <span class="highlight">Sale</span></h2>
+                                    <p>Nam apeirian assentior ei, utquo eros posse verterem. Cum eu error congue saperet. Teer eam exerci vputate consetetur.</p>
+                                    <a class="btn btn-default">Shop Now</a>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <img class="img-responsive" src="images/option.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-7">
+                                <div class="intro-content">
+                                    <h1>Last Chance</h1>
+                                    <h2>Biggest <span class="highlight">Sale</span></h2>
+                                    <p>Nam apeirian assentior ei, utquo eros posse verterem. Cum eu error congue saperet. Teer eam exerci vputate consetetur.</p>
+                                    <a class="btn btn-default">Shop Now</a>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <img class="img-responsive" src="images/option.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-7">
+                                <div class="intro-content">
+                                    <h1>Last Chance</h1>
+                                    <h2>Biggest <span class="highlight">Sale</span></h2>
+                                    <p>Nam apeirian assentior ei, utquo eros posse verterem. Cum eu error congue saperet. Teer eam exerci vputate consetetur.</p>
+                                    <a class="btn btn-default">Shop Now</a>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <img class="img-responsive" src="images/person.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-7">
+                                <div class="intro-content">
+                                    <h1>Last Chance</h1>
+                                    <h2>Biggest <span class="highlight">Sale</span></h2>
+                                    <p>Nam apeirian assentior ei, utquo eros posse verterem. Cum eu error congue saperet. Teer eam exerci vputate consetetur.</p>
+                                    <a class="btn btn-default">Shop Now</a>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <img class="img-responsive" src="images/option.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-7">
+                                <div class="intro-content">
+                                    <h1>Last Chance</h1>
+                                    <h2>Biggest <span class="highlight">Sale</span></h2>
+                                    <p>Nam apeirian assentior ei, utquo eros posse verterem. Cum eu error congue saperet. Teer eam exerci vputate consetetur.</p>
+                                    <a class="btn btn-default">Shop Now</a>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <img class="img-responsive" src="images/person.png" alt="" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Controls -->
+            <a class="left carousel-control" href="#home" role="button" data-slide="prev"><i class="fa fa-angle-left"></i></a>
+            <a class="right carousel-control" href="#home" role="button" data-slide="next"><i class="fa fa-angle-right"></i></a>
+        </div>
+    </div>
+</section>
 <#nested> 
 <footer class="footer x-sm-footer">
   <p>${OPTION('web_copyright')!'暂未填写版权信息'}</p>
@@ -90,6 +216,7 @@ ${OPTION('jpblog_statistical_code')!}
 <@script_import />
   <script src="${CTPATH}/assets/js/jquery-2.1.1.min.js"></script>
   <script src="${CTPATH}/assets/mediaelement/mediaelement-and-player.min.js"></script>
+  <script src="${CTPATH}/assets/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 <@script />
 </script>
