--- a/jpress-web-template-jblog/src/main/webapp/templates/JBlog/_layout.html
+++ b/jpress-web-template-jblog/src/main/webapp/templates/JBlog/_layout.html
@@ -51,11 +51,11 @@
   <div class="x-layout-100 jblog-link-logo">
     <div class="jblog-link-logo-content">
       <div class="jblog-link-logo-image"><a href="${CPATH}/">${WEB_NAME!}</a></div>
-      <div class="jblog-link-logo-adv">
+<!--      <div class="jblog-link-logo-adv">
 	      <a href="${OPTION('jpblog_banner_url')!'#'}">
 	      	<img src="${CPATH}${OPTION('jpblog_banner_image')!TPATH+'/assets/images/banner.jpg'}"/>
 	      </a>
-      </div>
+      </div>-->
     </div>
   </div>
   <!-- -->
